
Morten:
	* New function COLUMNNUMBER.
	* Fix ABRs in imported pcre code.
	* Leak fix for gnumeric xml saving.
	* Leak fix for character encoding selection.
	* Fix stf import crash for empty files.
	* Improve generation of binomial and negative-binomial random
	  numbers.
	* Fix stf dialog problem with WM close.
	* Make stf export quoting UTF-8 safe.

--------------------------------------------------------------------------

Gnumeric 1.1.17

Andreas:
	* Add character encoding menus to the file selector
	* Handle specified encoding for csv/tsv files
	* Handle specified encoding for configurable text import
	* Fix csv parsing (#80806), finally
	* Fix #100529, #78355, #99649

Ben Liblit:
	* Support for automake 1.6.x
	* Modernize the rpm .spec file

Emmanuel Pacaud:
	* Add encoding selector to stf export

Jody:
	* Improve handling of files with content type != extension
	* A few small bugs in XL97 export.
	* Simplify defining new services
	* Work on graphs
	* Fix xbase importer
	* Add motion compression for high speed scrolling
	* Fix elapsed hour format
	* Make the edit item smarter at the right edge
	* Handle saving too many merged cells for 1 xls record
	* Fix internal hashing bug with styles containing auto colors
	* Improve update semantics of ExprEntry in preparation for graphs
	* Make sheet_get_extent span when needed.
	* Fix old bug exposed by alex's fix to mapping in foocanvas.

Jukka:
	* Added shuffling tool.
	* Added `Edit'->`Fill'->`Series...' filling tool like in XL.
	* Added scenario tools.

Martin Hoffmann:
	* Fix autocompletion in the face of multi-byte characters.

Morten:
	* Make RenderedValue use a PangoLayout for storing the contents
	  of a cell.  (Operation Snappiness, Part 3.)
	* Make mstyle cache pango attributes.  (Operation Snappiness,
          Part 4.)
	* Make sure our pango contexts have language set.  (Operation
	  Snappiness, Part 5.)
	* Shave off a few cycles here and there.
	* Improve progress display when loading.