@@ -35,7 +35,7 @@ typedef struct
 {
 
 	StfTerminatorType_t terminator_type;      /* Desired line terminator */
-	char                cell_separator;       /* Desired cell separator */
+	gunichar            cell_separator;       /* Desired cell separator */
 
 	GSList             *sheet_list;           /* Sheets to export */
 
@@ -59,7 +59,7 @@ void                 stf_export_options_free (StfExportOptions_t *export_options
  * Manipulation of StfExportOptions struct
  */
 void stf_export_options_set_terminator_type (StfExportOptions_t *export_options, StfTerminatorType_t terminator_type);
-void stf_export_options_set_cell_separator  (StfExportOptions_t *export_options, char cell_separator);
+void stf_export_options_set_cell_separator  (StfExportOptions_t *export_options, gunichar cell_separator);
 void stf_export_options_set_quoting_mode    (StfExportOptions_t *export_options, StfQuotingMode_t quoting_mode);
 void stf_export_options_set_quoting_char    (StfExportOptions_t *export_options, gunichar quoting_char);
 void stf_export_options_set_charset 	    (StfExportOptions_t *export_options, char const * charset);
